--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="Effective Solutions for Business" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webstudio</title>
 
     <!-- Font -->
@@ -27,38 +27,39 @@
   <body>
     <!-- Header section -->
     <header class="header">
-      <nav class="header-nav">
-        <a class="header-logo-link" href="./index.html"
-          >Web<span class="header-logo-accent">Studio</span></a
-        >
-        <ul class="header-list">
-          <li class="header-item">
-            <a class="header-link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link" href="">Portfolio</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-
-      <!-- Contact section -->
-      <address class="contacts-address">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="header-container container">
+        <nav class="header-nav">
+          <a class="header-logo-link" href="./index.html"
+            >Web<span class="header-logo-accent">Studio</span></a
+          >
+          <ul class="header-list">
+            <li class="header-item">
+              <a class="header-link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link" href="">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- Contact section -->
+        <address class="contacts-address">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item-tel">
+              <a class="contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!-- Hero section -->
