--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li class="header-item">
               <a class="header-link" href="">Portfolio</a>
             </li>
-            <li class="header-item">
+            <li class="header-item-contact">
               <a class="header-link" href="">Contacts</a>
             </li>
           </ul>
