--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
 
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">
-          <span class="hero-button-text">Order Service</span>
-        </button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button">
+            <span class="hero-button-text">Order Service</span>
+          </button>
+        </div>
       </section>
 
       <!-- Features -->
