--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 >info@devstudio.com</a
               >
             </li>
-            <li class="contacts-item-tel">
+            <li class="contacts-item">
               <a class="contacts-link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
