--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
   <body>
     <!-- Header section -->
+    <!-- #region -->
     <header class="header">
       <div class="header-container container">
         <nav class="header-nav">
@@ -61,9 +62,10 @@
         </address>
       </div>
     </header>
+    <!-- endregion -->
 
     <!-- Hero section -->
-
+    <!-- #region -->
     <main>
       <section class="hero">
         <div class="container">
@@ -73,41 +75,46 @@
           </button>
         </div>
       </section>
+      <!-- endregion -->
 
       <!-- Features -->
+      <!-- #region -->
       <section class="features">
-        <h2 hidden class="features-title">About</h2>
-        <ul class="features-list">
-          <li class="features-item">
-            <h3 class="features-subtitle">Strategy</h3>
-            <p class="features-reviews">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-subtitle">Punctuality</h3>
-            <p class="features-reviews">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-subtitle">Diligence</h3>
-            <p class="features-reviews">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-subtitle">Technologies</h3>
-            <p class="features-reviews">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <h2 class="visually-hidden">About</h2>
+        <div class="container">
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="features-subtitle">Strategy</h3>
+              <p class="features-reviews">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Punctuality</h3>
+              <p class="features-reviews">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Diligence</h3>
+              <p class="features-reviews">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Technologies</h3>
+              <p class="features-reviews">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
+      <!-- endregion -->
 
       <!-- Our team -->
 
