--- a/index.html
+++ b/index.html
@@ -117,56 +117,59 @@
       <!-- endregion -->
 
       <!-- Our team -->
-
+      <!-- #region -->
       <section class="team-section">
-        <h2 class="team-titel">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              class="team-photo"
-              src="./images/team/mark.jpg"
-              alt="Photo Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitel">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-photo"
-              src="./images/team/tom.jpg"
-              alt="Photo Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitel">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-photo"
-              src="./images/team/camilla.jpg"
-              alt="Photo Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitel">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-photo"
-              src="./images/team/daniel.jpg"
-              alt="Photo Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-subtitel">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-titel">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-photo"
+                src="./images/team/mark.jpg"
+                alt="Photo Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-subtitel">Mark Guerrero</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-photo"
+                src="./images/team/tom.jpg"
+                alt="Photo Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-subtitel">Tom Ford</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-photo"
+                src="./images/team/camilla.jpg"
+                alt="Photo Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-subtitel">Camila Garcia</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-photo"
+                src="./images/team/daniel.jpg"
+                alt="Photo Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-subtitel">Daniel Wilson</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
+      <!-- endregion -->
 
       <!-- Section portfolio -->
       <section>
