--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </header>
     <!-- endregion -->
 
-    <!-- Hero section -->
+    <!-- Hero section 1 -->
     <!-- #region -->
     <main>
       <section class="hero">
@@ -77,7 +77,7 @@
       </section>
       <!-- endregion -->
 
-      <!-- Features -->
+      <!-- Features section 2 -->
       <!-- #region -->
       <section class="features">
         <div class="container">
@@ -116,7 +116,7 @@
       </section>
       <!-- endregion -->
 
-      <!-- Our team -->
+      <!-- Team section 3 -->
       <!-- #region -->
       <section class="team-section">
         <div class="container">
@@ -130,8 +130,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitel">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="team-container">
+                <h3 class="team-subtitel">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -141,8 +143,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitel">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="team-container">
+                <h3 class="team-subtitel">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -152,8 +156,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitel">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
+              <div class="team-container">
+                <h3 class="team-subtitel">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -163,8 +169,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-subtitel">Daniel Wilson</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="team-container">
+                <h3 class="team-subtitel">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
