--- a/index.html
+++ b/index.html
@@ -179,77 +179,93 @@
       </section>
       <!-- endregion -->
 
-      <!-- Section portfolio -->
-      <section>
-        <h2 class="portfolio-titel">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img
-              class="portfolio-photo"
-              src="./images/portfolio/img-5.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-subtitel">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-photo"
-              src="./images/portfolio/img-4.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-subtitel">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-photo"
-              src="./images/portfolio/img-3.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-subtitel">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-photo"
-              src="./images/portfolio/img-2.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-subtitel">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-photo"
-              src="./images/portfolio/img-1.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-subtitel">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-photo"
-              src="./images/portfolio/img.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-subtitel">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
+      <!-- Portfolio section 4  -->
+      <section class="portfolio">
+        <div class="container">
+          <h2 class="portfolio-titel">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                class="portfolio-photo"
+                src="./images/portfolio/img-5.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="port-container">
+                <div class="port-container">
+                  <h3 class="portfolio-subtitel">Banking App</h3>
+                  <p class="portfolio-text">App</p>
+                </div>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-photo"
+                src="./images/portfolio/img-4.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="port-container">
+                <h3 class="portfolio-subtitel">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-photo"
+                src="./images/portfolio/img-3.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="port-container">
+                <h3 class="portfolio-subtitel">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-photo"
+                src="./images/portfolio/img-2.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <div class="port-container">
+                <h3 class="portfolio-subtitel">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-photo"
+                src="./images/portfolio/img-1.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="port-container">
+                <h3 class="portfolio-subtitel">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-photo"
+                src="./images/portfolio/img.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <div class="port-container">
+                <h3 class="portfolio-subtitel">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
