--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <div class="container">
           <h2 class="portfolio-titel">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li class="portfolio-item">
+            <li class="portfolio-item item-accent">
               <img
                 class="portfolio-photo"
                 src="./images/portfolio/img-5.jpg"
