--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
       <!-- endregion -->
 
       <!-- Portfolio section 4  -->
+      <!-- #region -->
       <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-titel">Our Portfolio</h2>
@@ -267,18 +268,22 @@
           </ul>
         </div>
       </section>
+      <!-- endregion -->
     </main>
 
     <!-- Footer -->
-
+    <!-- #region -->
     <footer class="footer-sect">
-      <a class="footer-link" href="./index.html"
-        >Web<span class="footer-logo-accent">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-link" href="./index.html"
+          >Web<span class="footer-logo-accent">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
+    <!-- endregion -->
   </body>
 </html>
